Update java client